# attributecode

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  README.rst  about.ABOUT  configure  configure.bat  setup.cfg  setup.py
docs/: CHANGELOG.rst  requirements.txt  samples.txt
docs/source/: conf.py  general.rst  howto.rst  index.rst  setup.rst
etc/: configure.py
etc/conf/: base.txt
samples/: report_sample.xlsx  simple_sample.csv
src/attributecode/: __init__.py  __main__.py  api.py  attrib.py  attrib_util.py  cmd.py  gen.py  model.py  util.py
templates/: dedup_html.template  default_html.template  sample.MAPPING  scancode.template  template_license_ref_by_confirmed_license.html
tests/: test_attrib.py  test_cmd.py  test_model.py  test_util.py  testing_utils.py
tests/testdata/test_attrib/scancode_custom_template/: scancode.template
tests/testdata/test_cmd/help/: about_help.txt
tests/testdata/test_util/load/: clean-text-0.3.0-lceupi.json  key.config  simple_sample.csv  simple_sample.xlsx
