[bdist_wheel]
universal = 1

[aliases]
release = clean --all sdist --formats=bztar,zip bdist_wheel 

[tool:pytest]
norecursedirs =
    .git
    .cache
    .settings
    bin
    dist
    dist
    build
    _build
    docs
    man
    share
    example
    etc
    Include
    include
    Lib
    lib
    local
    Scripts
    thirdparty
    tmp
    tests/testdata/*

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxXw
    --strict
     -s
     -vv
    --ignore docs/conf.py
    --ignore setup.py
    --doctest-modules

    
[wheel]
universal=1

[metadata]
license_file = apache-2.0.LICENSE
name = attributecode
author = nexB. Inc. and others
author_email = info@aboutcode.org
description = Generate attribution document with input of CSV/Excel/JSON.
long_description = file:README.rst
url = https://github.com/nexB/attributecode
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development
    Topic :: Software Development :: Documentation
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    jinja2 >= 2.9, < 3.0
    click
    # required by saneyaml
    PyYAML >= 3.11, <=3.13
    saneyaml
    boolean.py >= 3.5, < 4.0
    license_expression >= 0.94
    packageurl_python >= 0.9.0

setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest >= 6
    pytest-xdist >= 2

[options.entry_points]
console-scripts =
    attributecode = attributecode.cmd:attributecode