[metadata]
license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
name = attributecode
author = nexB. Inc.
author_email = info@aboutcode.org
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Generate attribution document with input of CSV/Excel/JSON.
long_description = file:README.rst
url = https://github.com/nexB/attributecode
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =
    utilities

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    jinja2 >= 2.9, < 3.0
    click
    # required by saneyaml
    PyYAML
    saneyaml
    boolean.py >= 3.5, < 4.0
    license_expression >= 0.94
    packageurl_python >= 0.9.0
    openpyxl

setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest >= 6
    pytest-xdist >= 2
    mock
docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1

[options.entry_points]
console-scripts =
    attributecode = attributecode.cmd:attributecode

[tool:pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    thirdparty
    local
    ci
    docs
    etc
    Include
    include
    Lib
    lib
    bin
    Scripts
    tmp
    .cache
    data
    src/data
    tests/data
    tests/ignore
    tests/Ignore
    tests/ignore/

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxX
    --strict-markers
    -s
    -vv
    --ignore docs/conf.py
    --ignore setup.py
    --doctest-modules